--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,36 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Scrappyard</title>
-  <base href="/">
-
+  <title>Welcome to Scrappyard</title>
+  <base href="https://scrappyard-4d43f.firebaseapp.com/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- update the version number as needed -->
+  <script defer src="/__/firebase/5.3.1/firebase-app.js"></script>
+  <!-- include only the Firebase features as you need -->
+  <script defer src="/__/firebase/5.3.1/firebase-auth.js"></script>
+  <script defer src="/__/firebase/5.3.1/firebase-database.js"></script>
+  <script defer src="/__/firebase/5.3.1/firebase-messaging.js"></script>
+  <script defer src="/__/firebase/5.3.1/firebase-storage.js"></script>
+  <!-- initialize the SDK after all desired features are loaded -->
+  <script defer src="/__/firebase/init.js"></script>
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyCB2-DPdGM7UJ43_HEu_Qa5HrvXvNA5IL0",
+      authDomain: "scrappyard-4d43f.firebaseapp.com",
+      databaseURL: "https://scrappyard-4d43f.firebaseio.com",
+      projectId: "scrappyard-4d43f",
+      storageBucket: "scrappyard-4d43f.appspot.com",
+      messagingSenderId: "1078879076895"
+    };
+    firebase.initializeApp(config);
+  </script>
 </body>
 </html>
