--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,12 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!-- update the version number as needed -->
-  <script defer src="/__/firebase/5.3.1/firebase-app.js"></script>
+  <script defer src="https://www.gstatic.com/firebasejs/5.3.1/firebase-app.js"></script>
   <!-- include only the Firebase features as you need -->
-  <script defer src="/__/firebase/5.3.1/firebase-auth.js"></script>
-  <script defer src="/__/firebase/5.3.1/firebase-database.js"></script>
-  <script defer src="/__/firebase/5.3.1/firebase-messaging.js"></script>
-  <script defer src="/__/firebase/5.3.1/firebase-storage.js"></script>
-  <!-- initialize the SDK after all desired features are loaded -->
-  <script defer src="/__/firebase/init.js"></script>
+  <!--<script defer src="https://www.gstatic.com/firebasejs/5.3.1/firebase-auth.js"></script>-->
+  <!--<script defer src="https://www.gstatic.com/firebasejs/5.3.1/firebase-database.js"></script>-->
+  <!--<script defer src="https://www.gstatic.com/firebasejs/5.3.1/firebase-messaging.js"></script>-->
+  <!--<script defer src="https://www.gstatic.com/firebasejs/5.3.1/firebase-storage.js"></script>-->
 </head>
 <body>
   <app-root></app-root>
