--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Welcome to Scrappyard</title>
+  <meta name="description" content="Scrappyard, Enterprise Prototyping">
   <base href="https://scrappyard-4d43f.firebaseapp.com/">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
@@ -17,6 +18,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <!-- Service worker -->
+  <script src="/path/to/sw-toolbox/companion.js" data-service-worker="service-worker.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
@@ -24,8 +26,25 @@
         .catch(err => console.error('Error', err));
     }
   </script>
-
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#1976d2">
+</head>
+<body>
+  <app-root></app-root>
+  <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyCB2-DPdGM7UJ43_HEu_Qa5HrvXvNA5IL0",
+      authDomain: "scrappyard-4d43f.firebaseapp.com",
+      databaseURL: "https://scrappyard-4d43f.firebaseio.com",
+      projectId: "scrappyard-4d43f",
+      storageBucket: "scrappyard-4d43f.appspot.com",
+      messagingSenderId: "1078879076895"
+    };
+    firebase.initializeApp(config);
+  </script>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </head>
 <body>
   <app-root></app-root>
