--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Welcome to Scrappyard</title>
+  <title>Welcome to Scrapyard</title>
   <base href="https://scrappyard-4d43f.firebaseapp.com/">
   <meta charset="utf-8">
-  <meta name="description" content="Scrappyard, Enterprise Prototyping">
+  <meta name="description" content="Scrapyard, Enterprise Prototyping">
   <meta name="theme-color" content="#1976d2">
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
   <meta name="format-detection" content="telephone=no">
